test/Fail/Issue4927-7.agda
data D : Set where
  c : D → D

pattern q (@♭ x) = c x
