test/Fail/Issue4927-7.err
Issue4927-7.agda:4.18: error: [ParseError]
Illegal pattern synonym argument  x
(Cohesion annotations not allowed in pattern synonym arguments.)
